gitops/apps/hello-world/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    pod-security.kubernetes.io/enforce: restricted
