gitops/apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
